# parakeet.cpp

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile.ubi  README.md
.autopoc/: rhoai-evaluation.md
.autopoc/blog/: abstract.md  final.md  seo.md
benchmarks/: BENCHMARK.md
benchmarks/results/: parakeet-ctc-0.6b.json  parakeet-ctc-1.1b.json  parakeet-rnnt-0.6b.json  parakeet-rnnt-1.1b.json  parakeet-tdt-0.6b-v2.json  parakeet-tdt-0.6b-v3.json  parakeet-tdt-1.1b.json  parakeet-tdt_ctc-1.1b.json  parakeet-tdt_ctc-110m.json  parakeet_realtime_eou_120m-v1.json  threads.json
docs/: conversion.md  parity.md  quantization.md
examples/cli/: main.cpp
include/: parakeet.h  parakeet_capi.h
kubernetes/: help-job.yaml  json-output-job.yaml  model-download-job.yaml  namespace.yaml  pvc.yaml  transcription-job.yaml
scripts/: convert_parakeet_to_gguf.py  gen_benchmark_md.py  gen_nemo_baseline.py  gen_stream_baseline.py  publish_hf.py
src/: backend.cpp  backend.hpp  conformer.cpp  conformer.hpp  ctc_decoder.cpp  encoder.cpp  encoder.hpp  ggml_graph.cpp  ggml_graph.hpp  joint.cpp  mel.cpp  mel.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  parakeet.cpp  parakeet_capi.cpp  prediction.cpp  prediction.hpp  relpos_attention.cpp  relpos_attention.hpp  rnnt.cpp  rnnt.hpp  search.cpp  search.hpp  streaming.cpp  streaming.hpp  streaming_encoder.cpp  streaming_encoder.hpp  subsampling.cpp  subsampling.hpp  tdt.cpp  tdt.hpp  transducer_batch.cpp
tests/: CMakeLists.txt  parity.hpp
tests/python/: check_baseline.py  check_convert.py
(+6 files in other folders)
